update html, css

--- a/index.html
+++ b/index.html
@@ -444,16 +444,134 @@
                             <button class="container__time-left-btn">Đặt bàn ngay</button>
                         </div>
 
-                        <div class="col l-5 m-12 c-12 container__time-right">
-
-                        </div>
+                        <div class="col l-5 m-12 c-12 container__time-right"></div>
                     </div>
+                </div>
+            </div>
+
+            <div class="container__banner">
+                <div class="grid">
+                    <ul class="row container__banner-list">
+                        <li class="col container__banner-list-item">
+                            <a href="" class="container__list-link">
+                                <img src="./assets/img/picture_1.webp" alt="">
+                            </a>
+                        </li>
+
+                        <li class="col container__banner-list-item">
+                            <a href="" class="container__list-link">
+                                <img src="./assets/img/picture_2.webp" alt="">
+                            </a>
+                        </li>
+
+                        <li class="col container__banner-list-item">
+                            <a href="" class="container__list-link">
+                                <img src="./assets/img/picture_3.webp" alt="">
+                            </a>
+                        </li>
+
+                        <li class="col container__banner-list-item">
+                            <a href="" class="container__list-link">
+                                <img src="./assets/img/picture_4.webp" alt="">
+                            </a>
+                        </li>
+
+                        <li class="col container__banner-list-item">
+                            <a href="" class="container__list-link">
+                                <img src="./assets/img/picture_5.webp" alt="">
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
 
         <footer id="footer">
+            <div class="grid wide">
+                <div class="row footer__list">
+                    <div class="col l-4 footer__left">
+                        <div class="footer__left-logo">
+                            <img src="./assets/img/logo.webp" alt="">
+                        </div>
+                        <p class="footer__left-content">
+                            Chúng tôi mong muốn Tea House sẽ trở thành “Nhà Trà", nơi mọi người xích lại gần nhau và tìm thấy niềm vui, sự sẻ chia thân tình bên những tách cà phê đượm hương, chất lượng.
+                        </p>
 
+                        <ul class="footer__left-list-link">
+                            <li class="footer__left-list-item">
+                                <a href="" class="footer__left-link">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li class="footer__left-list-item">
+                                <a href="" class="footer__left-link">
+                                    <i class="fa-brands fa-facebook"></i>
+                                </a>
+                            </li>
+                            <li class="footer__left-list-item">
+                                <a href="" class="footer__left-link">
+                                    <i class="fa-brands fa-tiktok"></i>
+                                </a>
+                            </li>
+                            <li class="footer__left-list-item">
+                                <a href="" class="footer__left-link">
+                                    <i class="fa-brands fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li class="footer__left-list-item">
+                                <a href="" class="footer__left-link">
+                                    <i class="fa-brands fa-youtube"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col l-4 footer__mid">
+                        <div class="footer__mid-header">
+                            Liên hệ với chúng tôi
+                        </div>
+                        <ul class="footer__mid-content">
+                            <li class="footer__mid-content-icon">
+                                <i class="fa-solid fa-location-dot"></i>
+                            </li>
+                            <li class="footer__mid-content-desc">
+                                Địa chỉ: Số 7, Sơn Cẩm, thành phố Thái Nguyên, Thái Nguyên, Vietnam.
+                            </li>
+                        </ul>
+
+                        <ul class="footer__mid-content">
+                            <li class="footer__mid-content-icon">
+                                <i class="fa-solid fa-phone"></i>
+                            </li>
+                            <li class="footer__mid-content-desc">
+                                <p class="footer__mid-content-text">Hotline đặt bàn: 1900 ****</p>
+                                <p class="footer__mid-content-text">Hotline giao hàng: 0329 479 ***</p>
+                            </li>
+                        </ul>
+                    </div>
+
+                    <div class="col l-4 footer__right">
+                        <div class="footer__right-header">
+                            Đăng ký nhận khuyến mại
+                        </div>
+                        <p class="footer__right-content">
+                            Đừng bỏ lỡ những sản phẩm và chương trình khuyến mãi hấp dẫn.
+                        </p>
+
+                        <div class="footer__right-div-input">
+                            <input class="footer__right-input" type="email" placeholder="Email của bạn">
+                            <button class="footer__right-btn">Đăng ký</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col l-12 footer__last">
+                    <p class="footer__last-text">© Bản quyền thuộc về TH House Team</p>
+                    <p class="footer__last-text">
+                        Cung cấp bởi
+                        <a href="">ZteeBoss</a>
+                    </p>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
